WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283047
[scroll-animations] imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/setting-playback-rate.html crashes
https://bugs.webkit.org/show_bug.cgi?id=283047
Summary
[scroll-animations] imported/w3c/web-platform-tests/scroll-animations/scroll-...
Antoine Quint
Reported
2024-11-13 02:37:26 PST
Following
bug 283046
, the WPT test imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/setting-playback-rate.html no longer times out but crashes.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-13 07:24:18 PST
<
rdar://problem/139801846
>
Antoine Quint
Comment 2
2024-11-13 07:26:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36590
EWS
Comment 3
2024-11-13 09:53:37 PST
Committed
286541@main
(2b7c16d59dc0): <
https://commits.webkit.org/286541@main
> Reviewed commits have been landed. Closing PR #36590 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug