[scroll-animations] imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/setting-playback-rate.html crashes https://bugs.webkit.org/show_bug.cgi?id=283047 rdar://139801846

Reviewed by Anne van Kesteren.

Make sure we use a 0 value that matches the associated timeline type by using `WebAnimation::zeroTime()`.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/scroll-animations/scroll-timelines/setting-playback-rate-expected.txt:
* Source/WebCore/animation/WebAnimation.cpp:
(WebCore::WebAnimation::play):

Canonical link: https://commits.webkit.org/286541@main